--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -40,6 +40,10 @@ table{
     border-spacing: 0;
 }
 
+button {
+    cursor: pointer;
+}
+
 input{
     -webkit-appearance: none;
     border-radius: 0;
