--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     padding: 30px;
     background-color: rgba(15, 10, 222, 1);
