--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,10 @@
+$defaultButtonBackground : rgba(15, 10, 222, 1);
+$logoutButtonBackground : red;
+
 .button {
     padding: 15px 30px;
     color: white;
+    background-color: $defaultButtonBackground;
     border: none;
     border-radius: 8px;
     font-size: 16px;
@@ -10,5 +14,5 @@
 }
 
 .button-logout {
-    background-color: red;
+    background-color:$logoutButtonBackground;
 }
