--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 30px;
-    background-color: rgba(15, 10, 222, 1);
+    padding: 10px;
+    background-color: #3c948b
 }
 
 .header__nav {
