--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,26 @@ $logoutButtonBackground : red;
     }
 }
 
+.pagination__button {
+    cursor: pointer;
+    margin: 0 1px;
+    font-size: 15px;
+    color: white;
+    background: #3c948b;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+  
+    &.disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+  
+    &:hover {
+      background: #0056b3;
+    }
+  }
+
 .button-logout {
     background-color:$logoutButtonBackground;
 }
