--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,19 +8,30 @@
 }
 
 .header__nav {
-    & ul {
+    & .nav__ul {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width:300px;
-        & li {
+        width: 300px;
+
+        & .nav__li {
             color: white;
             font-size: 20px;
             cursor: pointer;
+
             &:hover {
                 opacity: 0.5;
             }
         }
 
+    }
+
+    & .sub-menu {
+        margin-bottom: 50px;
+        width: 600px;
+        & .nav__li {
+            margin-right: 15px;
+            color: black;
+        }
     }
 }
