--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -25,6 +25,15 @@ $logoutButtonBackground : red;
     }
 }
 
+h1 {
+    font-size: 50px;
+}
+
+p {
+    font-size: 16px;
+    color: black;
+}
+
 .pagination__button {
     cursor: pointer;
     margin: 0 1px;
