--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -18,7 +18,7 @@
             color: white;
             font-size: 20px;
             cursor: pointer;
-
+            text-decoration: none;
             &:hover {
                 opacity: 0.5;
             }
