--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -6,10 +6,12 @@
   }
   
   .pagination__number {
+    display: flex;
+    justify-content: space-between;
     margin: 0 5px;
     cursor: pointer;
     font-size: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
   
     &.active {
       font-weight: bold;
