--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,12 +1,10 @@
 .card {
-    width: 10%;
-    height: 500px;
-
+width: 10%;
+height: 100%;
+margin: 30px;
     & .card__name {
         background-color: #3c948b;
         color: #b9e3de;
-        padding: 10px;
-        height: 10%;
         font-size: 18px;
         border-bottom: 1px white solid;
         cursor: pointer;
@@ -15,7 +13,7 @@
 
     & .card__image {
         width: 100%;
-        height: 80%;
+        height: 50%;
         cursor: pointer;
 
     }
