--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -2,7 +2,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    & .card {
-        margin: 10px;
-    }
+    margin-bottom: 30px;
 }
