--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,7 +1,46 @@
 .card {
-width: 10%;
-height: 100%;
-margin: 30px;
+    width: 10%;
+    height: 100%;
+    margin: 30px;
+
+    display: flex;
+    width: 10%;
+    height: 100%;
+    margin: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+
+    .ant-card-body {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    & .ant-card-cover {
+        & img {
+            height: 250px;
+        }
+    }
+
+
+    & .card__icons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & .anticon {
+            & svg {
+                width: 20px;
+                height: 20px;
+                cursor: pointer;
+             &:hover {
+                opacity: 0.5;
+             }
+            }
+        }
+    }
+
     & .card__name {
         background-color: #3c948b;
         color: #b9e3de;
@@ -15,7 +54,6 @@ margin: 30px;
         width: 100%;
         height: 50%;
         cursor: pointer;
-
     }
 
     & .card__footer {
@@ -32,12 +70,13 @@ margin: 30px;
             height: 50%;
             display: flex;
             justify-content: space-between;
-             
+
             & img {
                 cursor: pointer;
-              &:hover {
-                opacity: 0.5;
-              }
+
+                &:hover {
+                    opacity: 0.5;
+                }
             }
         }
 
