--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,16 +1,13 @@
 .card {
     width: 10%;
     height: 100%;
-    margin: 30px;
-
     display: flex;
     width: 10%;
     height: 100%;
-    margin: 10px;
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
-
+    margin: 0 10px 10px 10px;
     .ant-card-body {
         display: flex;
         flex-direction: column;
