feat: Search Page
added the logic when user not typing a text in search input

--- a/src/styles/searchPage.scss
+++ b/src/styles/searchPage.scss
@@ -3,3 +3,9 @@
         width: 100%;
     }
 }
+
+.not-selected-shows {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
